test/compile_errors/err_task_unused_bound_handle.w
//! expect-error: unused Task handle

async fn warm_cache() -> i32:
    42

fn main:
    let task = warm_cache()
    let x = 1
